public/css/app.css
body {
  font-family: Arial, Helvetica, sans-serif;
  margin: 0;

  box-sizing: border-box;
  background-image: url("https://coolbackgrounds.io/images/backgrounds/index/sea-edge-79ab30e2.png");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
}

body::before {
  content: "";
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.2);
}

/* NAV BAR */
.navbar {
  background-color: #484848;
  overflow: hidden;
}

.navbar .navbar-nav .nav-link {
  color: #fff;
}

.navbar .navbar-nav .nav-link:hover {
  color: #fbc531;
}

.navbar .navbar-nav .active>.nav-link {
  color: #fbc531;
}

/* Carousel */

.carousel-item {
  height: 30rem;
  background: #000;
  border-radius: 3%;
}

.carousel-item img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 3%;
}

.carousel-item h5 {
  font-size: 40px;
}

.carousel-item img {
  opacity: 0.5;
}

/* COUNTDOWN TIMER */

@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');

.main {
  height: 100vh;
  background-size: cover;
  background: url('https://i.ibb.co/jfLZFhm/Bitmap.png') no-repeat top center;
}

h1 {
  text-align: center;
  font-weight: 400;
  font-size: 60px;
  padding-top: 30px;
}

.countdown {
  display: flex;
  justify-content: center;
  gap: 20px;
}

.countdown>div {
  display: flex;
  flex-wrap: nowrap;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 50px;
  box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.25);
  width: 80px;
  height: 80px;
  border-radius: 5px;
}

.number {
  font-weight: 500;
  font-size: 44px;
  color: #fbc531;
}

div span:last-of-type {
  font-size: 12px;
}

@media screen and (max-width:600px) {
  h1 {
    font-size: 40px;
  }

  .countdown {
    gap: 10px;
  }

  .countdown>div {
    width: 60px;
    height: 80px;
  }

  .number {
    font-size: 34px;
  }
}

/* .container-other-events as inline grid */
.container-other-events {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
  grid-gap: 1rem;
  margin: 0 auto;
  padding: 5 1rem;
}

/* OTHER EVENTS CONTAINER */
.event-card {
  width: 300px;
  height: 200px;
  background-color: #333;
  border-radius: 10px;
  outline: 1px solid rgba(255, 255, 255, .5);
  outline-offset: -8px;
  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
  position: relative;
  overflow: hidden;
}

.card-image {
  position: absolute;
  inset: 0;
  z-index: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  transition: transform 1.2s;
  opacity: 0.4;
}

.event-card:hover .card-image {
  transform: scale(1.10);
  opacity: 0.5;

}

.card-title {
  color: #fff;
  position: absolute;
  left: 15px;
  bottom: 15px;
  font-size: 22px;
  text-shadow: 0 0 1 rgba(0, 0, 0, 0.1);
  font-weight: bold;
  opacity: 1;
}

/* EVENT PAGE */

#event-content {
  position: relative;
  margin-top: 2rem;
  --bs-bg-opacity: .7;
  border-radius: 5%;
}

#event-content img {
  position: absolute;
  top: 0px;
  right: 0px;
  z-index: -1;
  width: 100%;
}

#event-content button {
  position: absolute;
  top: 2rem;
  right: 2rem;
  width: 12rem;
  height: 3.5rem;
}

#event-content h1,
h3 {
  color: #fff;
  position: absolute;
}

#event-content h3 {
  font-size: 1.5rem;
  top: 8rem;
  left: 2rem;
}

#event-content h1 {
  font-size: 4rem;
  top: 1rem;
  left: 1.7rem;
}

/* Event Page Sidebar */

* {
  margin: 5;
  padding: 0;
  box-sizing: border-box;
  font-family: "Josefin Sans", sans-serif;
}

.navigation {

  position: fixed;
  left: -2rem;
  top: 6.5em;
  height: 20rem;
  width: 15rem;
  background-color: #3d405b;
  overflow-x: hidden;
  transition: width 0.5s;
  border-radius: 20px;
  box-shadow: 5px 5px 0px #d291ff;
}

.navigation ul {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  padding-top: 40px;
}

.navigation ul li {
  position: relative;
  list-style: none;
  width: 90%;
  padding-left: 30px;
}

.navigation ul li::after {
  content: '';
  width: 40%;
  height: 90%;
  background: #c673ff;
  position: absolute;
  top: 10%;
  left: 0;
  border-radius: 0 50px 50px 0;
  transform: translateY(-10%) scaleX(0);
  transition: all 0.2s;
  transform-origin: left;
  opacity: 0;
}

.navigation ul li.active::after {
  transform: translateY(-10%) scaleX(1);
  opacity: 1;
}

.navigation ul li a {
  position: relative;
  display: flex;
  text-decoration: none;
  width: 100%;
  color: #f2cc8f;
}

.navigation ul li a .icon {
  margin-left: 10px;
  position: relative;
  display: block;
  height: 60px;
  line-height: 65px;
  text-align: center;
}

.navigation ul li a .icon ion-icon {
  position: relative;
  font-size: 1.5em;
  z-index: 1;
  font-weight: 500;
}

.navigation ul li a .title {
  position: relative;
  display: block;
  padding-left: 30px;
  height: 60px;
  line-height: 60px;
  font-size: 18px;
  font-weight: 500;
  white-space: nowrap;
}

#info-navbar-container div {
  position: relative;
  top: 1rem;
  left: 15rem;
  height: 500px;
}

#userDiv {
  background-color: white;
  width: 30rem;
}

#outroDiv {
  background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
  ;
  width: 70rem;
  border-radius: 2rem;
  border: 2px solid blue;
}


#info-navbar-container div table {
  width: 90%;
  font-size: 0.9em;
  background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
  margin: 0 auto;
}

#info-navbar-container div table thead {
  background-color: blue;
}

#info-navbar-container div table tr td {
  padding: 5px 20px 10px 10px;
}

#info-navbar-container div table tr:nth-child(odd) {
  background-color: rgba(255, 255, 255, 0.5);
}

#info-navbar-container div table tr:nth-child(even) {

  background-color: rgba(202, 160, 229, 0.7);
  color: #000;
}

#info-navbar-container div table tr td:last-child {
  padding: 5px 0;
  text-align: right;
}

#info-navbar-container div table tr td {
  vertical-align: middle;
}

/* END EVENT SIDEBAR */

#menu-info {

  font-size: 2rem;
  display: flex;
  gap: 1rem;
  margin-top: 2rem;
  list-style-type: none;
  position: absolute;
  top: 40rem;
  left: 15rem;
}

.menu-info-item {

  background-color: rgba(252, 207, 85, 0.8);
  border: 2px solid orangered;
  border-radius: 10%;
  width: 15rem;
  height: 5rem;
}

/*** FAQ PAGE *****************************************/
#faq-container {
  margin-top: 5rem;
  --bs-bg-opacity: .7;
  height: 40rem;
  border-radius: 5%;
  border: 3px solid blue;
}

@media screen and (max-width:624px) {
  #faq-container {
    height: 65rem;
  }
}

/*** END FAQ PAGE *************************************/

/*** SEARCH MODAL ************************************/

.modal-open .container-fluid,
.modal-open .container {
  -webkit-filter: blur(5px) grayscale(90%);
  filter: blur(5px) grayscale(90%);
}

#close-modal-button {
  top: 0.5rem;
  right: 0.5rem;
  overflow: hidden;
  position: absolute;
  border: none;
  padding: 0;
  width: 2em;
  height: 2em;
  border-radius: 50%;
  background: transparent;
  color: #1da1f2;
  font: inherit;
  text-indent: 100%;
  cursor: pointer;
}

#close-modal-button:focus {
  outline: solid 0 transparent;
  box-shadow: 0 0 0 2px #8ed0f9;
}

#close-modal-button:hover {
  background: rgba(29, 161, 142, .1);
}

#close-modal-button:before,
#close-modal-button:after {
  position: absolute;
  top: 15%;
  left: calc(50% - .0625em);
  width: 0.125em;
  height: 70%;
  border-radius: 0.125em;
  transform: rotate(45deg);
  background: currentcolor;
  content: '';
}

#close-modal-button:after {
  transform: rotate(-45deg);
}

#submitsearch {
  border: 1px solid rgb(138, 134, 134);
  margin-left: -82px;
  padding: 5px;
  border-radius: 19px;
  cursor: pointer;
  padding-left: 10px;
  padding-right: 8px;
  padding-top: 4px;

  display: none;
  box-shadow: 0 0 1px black;
  margin-right: 110px;
}

#searchInput,
#search-users {
  width: 90%;
  /* center input */
  margin-left: 5%;
  margin-right: 5%;
  margin-top: 8%;
  border: 1px solid #000;
  border-radius: 30px;
  font-size: 16px;
  background-color: white;
  background-image: url('https://cdn2.iconfinder.com/data/icons/ios-7-icons/50/search-24.png');

  background-position: 10px 7px;
  background-repeat: no-repeat;
  padding: 8px 20px 8px 40px;
  -webkit-transition: width 0.8s ease-in-out;
  transition: width 0.8s ease-in-out;
  outline: none;
  opacity: 0.9;
}

#search-users {
  margin-top: 1%;
}

.modal-content {
  margin-top: 15%;
  background-color: #8EC5FC;
  background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
}

#modal-content-box {
  border-radius: 5%;
  border: 4px solid #9300ff;
}

